[package]
name = "scroll-zkvm-build-guest"
version.workspace = true
edition.workspace = true

[dependencies]
scroll-zkvm-types.workspace = true

openvm-continuations.workspace = true
openvm-instructions.workspace = true
openvm-sdk = { workspace = true, features = ["evm-verify"] }
openvm-sdk-config = { workspace = true }
openvm-static-verifier = { workspace = true }
openvm-stark-sdk.workspace = true
openvm-build = { workspace = true, default-features = false }
openvm-circuit.workspace = true
openvm-deferral-circuit.workspace = true
openvm-verify-stark-circuit.workspace = true
eyre.workspace = true
hex.workspace = true
serde_json.workspace = true
snark-verifier-sdk.workspace = true
toml.workspace = true

cargo_metadata.workspace = true
dotenvy.workspace = true
clap = { version = "4.0", features = ["derive"] }

[features]
default = ["scroll"]
scroll = ["scroll-zkvm-types/scroll"]
