[package]
name = "scroll-zkvm-integration"
version.workspace = true
edition.workspace = true

[[bin]]
name = "chunk-benchmark"
path = "src/bin/chunk-benchmark.rs"

[[bin]]
name = "chunk-scanner"
path = "src/bin/chunk-scanner.rs"

[dependencies]
scroll-zkvm-types.workspace = true
scroll-zkvm-prover.workspace = true
scroll-zkvm-verifier.workspace = true

sbv-primitives = { workspace = true }
sbv-utils = { workspace = true }
sbv-core = { workspace = true, features = ["scroll"] }
tracing.workspace = true
tracing-subscriber.workspace = true
metrics-tracing-context.workspace = true
openvm-benchmarks-prove = { workspace = true, default-features = false }
openvm-benchmarks-utils = { workspace = true, default-features = false }
openvm-circuit.workspace = true
openvm-sdk = { workspace = true, default-features = false }

alloy-provider = { workspace = true }
alloy-rpc-client.workspace = true
alloy-transport = { workspace = true, features = ["throttle"] }
alloy-primitives.workspace = true
base64.workspace = true
bincode.workspace = true
cargo_metadata.workspace = true
clap.workspace = true
csv.workspace = true
eyre.workspace = true
rayon.workspace = true
serde.workspace = true
futures.workspace = true
vm-zstd = { workspace = true, features = ["zstd"] }
tokio = { workspace = true, features = ["full"] }

hex.workspace = true
chrono = "0.4"
glob = "0.3"
once_cell = "1.20"
revm = { workspace = true }
serde_json = "1.0"
snark-verifier-sdk = { workspace = true, default-features = false, features = [
  "loader_halo2",
  "halo2-axiom",
  "display",
] }
regex = "1.11.1"
sysinfo = { workspace = true, features = ["system"] }
bytesize.workspace = true
url.workspace = true
axiom-sdk.workspace = true
dotenvy.workspace = true

[dev-dependencies]
glob = "0.3"

[features]
default = ["limit-logs", "scroll"]
scroll = ["scroll-zkvm-types/scroll", "sbv-utils/scroll"]
cuda = ["scroll-zkvm-prover/cuda"]
limit-logs = []
perf-metrics = ["openvm-sdk/perf-metrics"]
