[package]
name = "scroll-zkvm-prover"
edition.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
scroll-zkvm-types.workspace = true
scroll-zkvm-verifier.workspace = true

rkyv.workspace = true
bincode_v1.workspace = true
tracing.workspace = true
openvm-circuit = { workspace = true }
openvm-native-circuit = { workspace = true, default-features = false }
openvm-native-recursion = { workspace = true }
openvm-sdk = { workspace = true }
openvm-stark-sdk = { workspace = true, default-features = false }

base64 = "0.22"
git-version = "0.3.5"
serde = "1.0"
serde_json = "1.0"
serde_stacker = "0.1"
thiserror = "2.0"
toml = "0.8"

[dev-dependencies]

[features]
default = []

