[package]
name = "scroll-zkvm-prover"
edition.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
scroll-zkvm-types.workspace = true
scroll-zkvm-verifier.workspace = true

bincode_v1.workspace = true
tracing.workspace = true
openvm-circuit = { workspace = true }
openvm-sdk = { workspace = true }
openvm-sdk-config = { workspace = true }
openvm-static-verifier = { workspace = true }
openvm-deferral-circuit = { workspace = true }
openvm-verify-stark-circuit = { workspace = true }
openvm-verify-stark-host = { workspace = true }
openvm-stark-sdk = { workspace = true, default-features = false }
openvm-cuda-backend = { workspace = true, optional = true }

base64 = "0.22"
eyre.workspace = true
git-version = "0.3.5"
hex.workspace = true
serde = "1.0"
serde_json = "1.0"
serde_stacker = "0.1"
thiserror.workspace = true
toml = "0.8"

cudarc = { version = "0.9", optional = true }

[dev-dependencies]

[features]
default = []
cuda = ["openvm-sdk/cuda", "dep:cudarc", "openvm-verify-stark-circuit/cuda", "dep:openvm-cuda-backend"]


