[package]
name = "scroll-zkvm-types"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
types-base = { path = "base", package = "scroll-zkvm-types-base" }
types-chunk = { path = "chunk", package = "scroll-zkvm-types-chunk", features = ["scroll-compress-ratio"] }
types-batch = { path = "batch", package = "scroll-zkvm-types-batch" }
types-bundle = { path = "bundle", package = "scroll-zkvm-types-bundle" }

openvm-sdk = { workspace = true }
openvm-native-recursion.workspace = true
openvm-stark-sdk = { workspace = true, default-features = false }
snark-verifier-sdk.workspace = true
sbv-primitives.workspace = true
serde.workspace = true
base64.workspace = true
bincode_v1.workspace = true
c-kzg.workspace = true
