[package]
name = "scroll-zkvm-verifier"
edition.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
scroll-zkvm-types.workspace = true

openvm-circuit.workspace = true
openvm-native-circuit.workspace = true
openvm-native-recursion = { workspace = true, features = ["static-verifier"] }
openvm-sdk.workspace = true
openvm-continuations.workspace = true
openvm-stark-sdk.workspace = true

itertools.workspace = true
snark-verifier-sdk = {workspace = true, default-features = false, features = ["loader_evm"]}

bincode_v1.workspace = true
eyre.workspace = true
revm = { workspace = true }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
scroll-zkvm-prover.workspace = true
base64.workspace = true
