[package]
name = "scroll-zkvm-verifier"
edition.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
scroll-zkvm-types.workspace = true
openvm-sdk = { workspace = true, features = ["evm-verify"] }
openvm-continuations.workspace = true
openvm-verify-stark-host = { workspace = true }
openvm-static-verifier = { workspace = true }
openvm-stark-sdk = { workspace = true }
openvm-circuit = { workspace = true }
once_cell = "1.20"
tracing.workspace = true
snark-verifier-sdk = {workspace = true, default-features = false, features = ["loader_evm"]}

bincode_v1.workspace = true
eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
sha256 = "1"

[dev-dependencies]
