[package]
name = "openvm-sdk"
version = "2.0.0-beta.2"
edition = "2021"
rust-version = "1.91.1"
authors = ["OpenVM Authors"]
homepage = "https://openvm.dev"
repository = "https://github.com/openvm-org/"
license = "MIT OR Apache-2.0"
autoexamples = false

[dependencies]
openvm-stark-backend = { git = "https://github.com/openvm-org/stark-backend.git", branch = "develop-v2", default-features = false }
openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", branch = "develop-v2", default-features = false, features = ["cpu-backend"] }
openvm-cuda-backend = { git = "https://github.com/openvm-org/stark-backend.git", branch = "develop-v2", default-features = false, optional = true }

openvm-build = { git = "https://github.com/openvm-org/openvm.git", branch = "develop-v2.1.0-rv64", default-features = false }
openvm-circuit = { git = "https://github.com/openvm-org/openvm.git", branch = "develop-v2.1.0-rv64", default-features = false }
openvm-transpiler = { git = "https://github.com/openvm-org/openvm.git", branch = "develop-v2.1.0-rv64", default-features = false }
openvm = { git = "https://github.com/openvm-org/openvm.git", branch = "develop-v2.1.0-rv64", default-features = false }

openvm-sdk-config = { git = "https://github.com/openvm-org/openvm.git", branch = "develop-v2.1.0-rv64", default-features = false }
openvm-recursion-circuit = { git = "https://github.com/openvm-org/openvm.git", branch = "develop-v2.1.0-rv64", default-features = false }
openvm-deferral-circuit = { git = "https://github.com/openvm-org/openvm.git", branch = "develop-v2.1.0-rv64", default-features = false }
openvm-continuations = { git = "https://github.com/openvm-org/openvm.git", branch = "develop-v2.1.0-rv64", default-features = false }
openvm-verify-stark-host = { git = "https://github.com/openvm-org/openvm.git", branch = "develop-v2.1.0-rv64", default-features = false }
openvm-verify-stark-circuit = { git = "https://github.com/openvm-org/openvm.git", branch = "develop-v2.1.0-rv64", default-features = false }
# Point to the local patch so `openvm-static-verifier/cuda` does not enable
# `snark-verifier-sdk/cuda` (Halo2 SNARK stays on CPU).
openvm-static-verifier = { path = "../openvm-static-verifier", default-features = false, optional = true }
halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib.git", tag = "v0.5.2", default-features = false, optional = true, features = ["halo2-axiom"] }

alloy-sol-types = { version = "1.4.1", optional = true }
forge-fmt = { git = "https://github.com/foundry-rs/foundry.git", tag = "v1.5.0", optional = true }
tempfile = { version = "3.13.0", optional = true }

bitcode = { version = "0.6.5", default-features = false, features = ["serde"] }
cfg-if = "1.0.0"
clap = { version = "4.5.23", features = ["derive"] }
derivative = "2.2.0"
derive_more = { version = "1.0.0", features = ["display"], default-features = false }
derive-new = "0.6.0"
eyre = "0.6.12"
getset = "0.1.3"
hex = { version = "0.4.3", default-features = false }
itertools = { version = "0.14.0", default-features = false }
serde = { version = "1.0.201", default-features = false, features = ["derive"] }
serde_json = "1.0.117"
serde_with = { version = "3.11.0", features = ["hex"] }
thiserror = "1.0.65"
tracing = "0.1.40"
metrics = { version = "0.23.0", optional = true }

[dev-dependencies]
tempfile = "3.13.0"

[features]
default = ["parallel", "jemalloc"]
root-prover = [
    "openvm-continuations/root-prover",
    "openvm-stark-sdk/baby-bear-bn254-poseidon2",
    "openvm-cuda-backend?/baby-bear-bn254-poseidon2",
]
evm-prove = [
    "root-prover",
    "dep:openvm-static-verifier",
    "dep:halo2-base",
    "openvm-static-verifier/evm-prove",
]
evm-verify = [
    "evm-prove",
    "openvm-static-verifier/evm-verify",
    "dep:alloy-sol-types",
    "dep:tempfile",
]
# Optional Solidity code formatting; requires Rust 1.91+ due to foundry/alloy transitive deps.
evm-verify-fmt = [
    "evm-verify",
    "dep:forge-fmt",
]
metrics = ["dep:metrics", "openvm-continuations/metrics", "openvm-sdk-config/metrics"]
aot = [
    "openvm-circuit/aot",
    "openvm-sdk-config/aot",
]
rvr = [
    "openvm-circuit/rvr",
    "openvm-sdk-config/rvr",
]
tco = [
    "openvm-circuit/tco",
    "openvm-sdk-config/tco",
]
unprotected = ["openvm-circuit/unprotected"]

# for guest profiling:
perf-metrics = [
    "openvm-circuit/perf-metrics",
    "openvm-transpiler/function-span",
    "openvm-sdk-config/perf-metrics"
]

# turns on stark-backend debugger in all proofs
stark-debug = ["openvm-circuit/stark-debug"]
test-utils = ["openvm-circuit/test-utils"]

parallel = ["openvm-continuations/parallel", "openvm-sdk-config/parallel"]
mimalloc = ["openvm-circuit/mimalloc", "openvm-sdk-config/mimalloc"]
jemalloc = ["openvm-circuit/jemalloc", "openvm-sdk-config/jemalloc"]
jemalloc-prof = ["openvm-circuit/jemalloc-prof"]

cuda = [
    "dep:openvm-cuda-backend",
    "openvm-circuit/cuda",
    "openvm-sdk-config/cuda",
    "openvm-continuations/cuda",
    "openvm-verify-stark-circuit/cuda",
    "openvm-static-verifier?/cuda",
]
cell-profiling = [
    "evm-prove",
    "openvm-static-verifier/cell-profiling",
]

[[example]]
name = "sdk_app"
path = "examples/sdk_app.rs"

[[example]]
name = "sdk_stark"
path = "examples/sdk_stark.rs"

[[example]]
name = "sdk_evm"
path = "examples/sdk_evm.rs"
required-features = ["evm-verify"]
