[package]
name = "scroll-zkvm-build-guest-sp1"
edition.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "scroll-zkvm-build-guest-sp1"
path = "src/main.rs"

[dependencies]
sp1-sdk = { workspace = true, features = ["blocking", "native-gnark"] }
sp1-build = { workspace = true }
scroll-zkvm-types-base = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
eyre = { workspace = true }

[features]
default = []
cuda = ["sp1-sdk/cuda"]
