[package]
name = "scroll-zkvm-build-guest-zisk"
edition.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "scroll-zkvm-build-guest-zisk"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = []
