[package]
name = "scroll-zkvm-ceno-bundle-circuit"
edition.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "bundle"
path = "src/main.rs"

[dependencies]
ceno_rt = { workspace = true }
alloy-primitives = { workspace = true }
scroll-zkvm-types-base = { workspace = true }
scroll-zkvm-types-bundle = { workspace = true }

[features]
default = []
