[package]
name = "scroll-zkvm-ceno-chunk-circuit"
edition.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "chunk"
path = "src/main.rs"

[dependencies]
ceno_rt = { workspace = true }
alloy-primitives = { workspace = true }
scroll-zkvm-types-base = { workspace = true }
scroll-zkvm-types-chunk = { workspace = true, features = ["scroll"] }

[features]
default = []
