[package]
name = "scroll-zkvm-ceno-chunk-circuit"
edition.workspace = true
readme.workspace = true
repository.workspace = true
version = "0.6.0"

[dependencies]
ceno_rt.workspace = true
ceno_crypto.workspace = true
ceno_sha2.workspace = true
bincode.workspace = true
scroll-zkvm-types-chunk.workspace = true
rkyv.workspace = true
serde_json.workspace = true

[features]
default = []
scroll = ["scroll-zkvm-types-chunk/scroll"]
