[package]
name = "scroll-zkvm-batch-circuit"
edition.workspace = true
readme.workspace = true
repository.workspace = true
version = "0.4.0"

[dependencies]
scroll-zkvm-circuit-input-types.workspace = true

openvm = { workspace = true, features = ["std"] }
openvm-algebra-guest.workspace = true
openvm-keccak256-guest.workspace = true
openvm-sha256-guest.workspace = true
openvm-ecc-guest = { workspace = true, features = ["halo2curves"] }
openvm-algebra-complex-macros = { workspace = true } 
openvm-pairing-guest = { workspace = true, features = ["halo2curves"] }
openvm-rv32im-guest.workspace = true

alloy-primitives = { workspace = true, default-features = false, features = ["std", "map-hashbrown", "map-fxhash", "rkyv"] }
bitcode.workspace = true
itertools.workspace = true
rkyv.workspace = true
serde.workspace = true
tiny-keccak.workspace = true

[features]
default = []

[dev-dependencies]
c-kzg = "1.0"
