[package]
name = "scroll-zkvm-bundle-circuit"
edition.workspace = true
readme.workspace = true
repository.workspace = true
version = "0.4.0"

[dependencies]
scroll-zkvm-circuit-input-types.workspace = true

openvm = { workspace = true, features = ["std"] }
openvm-algebra-guest.workspace = true
openvm-keccak256-guest.workspace = true
openvm-rv32im-guest.workspace = true

alloy-primitives = { workspace = true, default-features = false, features = ["std", "map-hashbrown", "map-fxhash"]}#, "rkyv"] }
rkyv.workspace = true

[features]
default = []
euclidv2 = []
