[package]
name = "scroll-zkvm-bundle-circuit"
edition.workspace = true
readme.workspace = true
repository.workspace = true
version = "0.7.0"

[dependencies]
bincode.workspace = true
scroll-zkvm-types-circuit.workspace = true
scroll-zkvm-types-bundle.workspace = true

openvm = { workspace = true, features = ["std"] }
openvm-keccak256-guest.workspace = true

alloy-primitives = { workspace = true }

[features]
default = []
