[package]
name = "scroll-zkvm-chunk-circuit"
edition.workspace = true
readme.workspace = true
repository.workspace = true
version = "0.4.0"

[dependencies]
scroll-zkvm-types-circuit = { workspace = true }
scroll-zkvm-types-chunk = { workspace = true }

rkyv.workspace = true

openvm = { workspace = true, features = ["std"] }
openvm-algebra-complex-macros = { workspace = true } 
openvm-algebra-guest = { workspace = true }
openvm-bigint-guest = { workspace = true }
openvm-ecc-guest = { workspace = true, features = ["k256", "p256"] }
openvm-keccak256-guest= { workspace = true }
openvm-pairing-guest = { workspace = true, features = ["bn254"] }
openvm-rv32im-guest= {  workspace = true }

[features]
default = []
openvm = ["scroll-zkvm-types-chunk/openvm"]

