[package]
name = "scroll-zkvm-chunk-circuit"
edition.workspace = true
readme.workspace = true
repository.workspace = true
version = "0.5.0"

[dependencies]
scroll-zkvm-types-circuit = { workspace = true }
scroll-zkvm-types-chunk = { workspace = true }
sbv-precompile = { workspace = true } 

rkyv.workspace = true

openvm = { workspace = true, features = ["std", "getrandom-unsupported"] }
openvm-k256 = { workspace = true }
openvm-p256 = { workspace = true }
openvm-pairing = { workspace = true, features = ["bn254"] }
openvm-algebra-complex-macros = { workspace = true } 
openvm-algebra-guest = { workspace = true }
openvm-bigint-guest = { workspace = true }
openvm-ecc-guest = { workspace = true }
openvm-keccak256-guest= { workspace = true }
openvm-pairing-guest = { workspace = true, features = ["bn254"] }
openvm-rv32im-guest= {  workspace = true }

[features]
default = ["openvm"]
openvm = ["scroll-zkvm-types-chunk/openvm", "sbv-precompile/scroll-openvm"]
