[package]
name = "scroll-zkvm-circuit-input-types-circuit"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
readme.workspace = true
repository.workspace = true
version = "0.2.0"

[dependencies]
scroll-zkvm-circuit-input-types-base.workspace = true
scroll-zkvm-circuit-input-types-aggregation.workspace = true
alloy-primitives.workspace = true
rkyv.workspace = true
serde.workspace = true
openvm = { workspace = true, features = ["std"] }
openvm-rv32im-guest.workspace = true
openvm-custom-insn.workspace = true
tiny-keccak = { workspace = true, features = ["openvm"]}
itertools.workspace = true

