[package]
name = "scroll-zkvm-circuit-input-types"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
alloy-primitives = { workspace = true, default-features = false, features = ["std", "map-hashbrown", "map-fxhash", "rkyv"] }
alloy-serde.workspace = true
rkyv.workspace = true
sbv = { workspace = true, features = ["scroll"] }
vm-zstd = { workspace = true }
serde.workspace = true
itertools.workspace = true
tiny-keccak = {workspace = true, features = ["openvm"] }

openvm = { workspace = true, features = ["std"] }
openvm-rv32im-guest = {  workspace = true }
openvm-custom-insn = { workspace = true }

[features]
default = []
euclidv2 = []
openvm = ["sbv/openvm"]
